--- a/WebshopFrontend/Components/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Components/Components/AddToCartButton.razor
@@ -1,8 +1,4 @@
-﻿@using WebshopFrontend.EventHandlers
-@using WebshopFrontend.Services
-@using WebshopFrontend.Services.Interfaces
-@rendermode InteractiveServer
-@inject IJSRuntime Js
+﻿@inject IJSRuntime Js
 @inject ICounterService CartCounterService
 @inject ICartService CartService
 
