--- a/WebshopFrontend/Components/Components/CartIcon.razor
+++ b/WebshopFrontend/Components/Components/CartIcon.razor
@@ -1,9 +1,4 @@
-﻿@using WebshopFrontend.EventHandlers
-@using WebshopFrontend.Services
-@using WebshopFrontend.Services.Interfaces
-@rendermode InteractiveServer
-@inject IJSRuntime Js
-@inject ICounterService CounterService
+﻿@inject ICounterService CounterService
 
 <NavLink href="checkout" class="text-gray">
     <div class="cart">
