--- a/WebshopFrontend/Components/Components/CheckoutProductTable.razor
+++ b/WebshopFrontend/Components/Components/CheckoutProductTable.razor
@@ -1,6 +1,4 @@
-﻿@using WebshopFrontend.Services.Interfaces
-@rendermode InteractiveServer
-@inject ICounterService CounterService
+﻿@inject ICounterService CounterService
 @inject ICartService CartService
 
 @if (CartItems == null || CartItems.Count == 0)
