--- a/WebshopFrontend/Components/Components/OrderConfirmationDetails.razor
+++ b/WebshopFrontend/Components/Components/OrderConfirmationDetails.razor
@@ -1,7 +1,4 @@
-﻿
-@using WebshopFrontend.Services.Interfaces
-@inject IOrderService OrderService
-
+﻿@inject IOrderService OrderService
 
 <table class="checkout-table">
     <caption>Order summary</caption>
