--- a/WebshopFrontend/Components/Components/ProductPreview.razor
+++ b/WebshopFrontend/Components/Components/ProductPreview.razor
@@ -1,6 +1,4 @@
-﻿@rendermode InteractiveServer
-
-<div class="product-flex-item white padding-y-16 padding-x-16">
+﻿<div class="product-flex-item white padding-y-16 padding-x-16">
     <NavLink href="@ProductHref" class="white">
         <div>
             <img src="@Product.Image.ImageSmallUrl" alt="@Product.Image.ImageText"/>
