--- a/WebshopFrontend/Components/Layout/NavMenu.razor
+++ b/WebshopFrontend/Components/Layout/NavMenu.razor
@@ -1,7 +1,4 @@
-﻿@rendermode InteractiveServer
-@using WebshopFrontend.Components.Components
-
-<nav class="nav-menu">
+﻿<nav class="nav-menu">
     @if (SideBarShown)
     {
         <div class="nav-menu-close padding-x padding-y">
