--- a/WebshopFrontend/Components/Layout/TopMenu.razor
+++ b/WebshopFrontend/Components/Layout/TopMenu.razor
@@ -1,7 +1,4 @@
-﻿@using WebshopFrontend.Components.Components
-@rendermode InteractiveServer
-
-<div class="text-xlarge top-menu">
+﻿<div class="text-xlarge top-menu">
     <div class="padding-x">
         LOGO
     </div>
