--- a/WebshopFrontend/Components/Components/CartIcon.razor
+++ b/WebshopFrontend/Components/Components/CartIcon.razor
@@ -1,4 +1,5 @@
 ﻿@inject ICounterService CounterService
+@inject ICartService CartService
 
 <NavLink href="checkout" class="text-gray">
     <div class="cart">
@@ -13,6 +14,16 @@
     {
         CounterService.CounterChanged += UpdateCartCounter;
     }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            var cart = await CartService.GetAll("");
+            CounterService.SetCount(cart.Sum(c => c.Quantity));
+        }
+    }
+
 
     private async void UpdateCartCounter(object? sender, int newCount)
     {
