--- a/WebshopFrontend/Components/Components/CheckoutProductTable.razor
+++ b/WebshopFrontend/Components/Components/CheckoutProductTable.razor
@@ -14,7 +14,7 @@ else
             <tr>
                 <th>Product</th>
                 <th>ArNr</th>
-                <th>DiscountPrice</th>
+                <th>Price</th>
                 <th>Total</th>
                 <th>Quantity</th>
                 <th></th>
@@ -26,7 +26,7 @@ else
                 <tr>
                     <td data-label="Product">@cartItem.Name</td>
                     <td data-label="ArNr">@cartItem.ArtNr</td>
-                    <td data-label="DiscountPrice">@cartItem.Price</td>
+                    <td data-label="Price">@cartItem.Price</td>
                     <td data-label="Total">@(cartItem.Quantity * cartItem.Price)</td>
                     <td data-label="Quantity">@cartItem.Quantity</td>
                     <td data-label="">
