--- a/WebshopFrontend/Components/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Components/Components/AddToCartButton.razor
@@ -9,16 +9,33 @@
 @code {
     [Parameter] public required int ProductId { get; set; }
     [Parameter] public required int Stock { get; set; }
+    [CascadingParameter] private Task<AuthenticationState>? AuthenticationState { get; set; }
 
-    private int _quantity = 1;
+    private const int Quantity = 1;
+    private string _userId = string.Empty;
+
+    protected override async Task OnInitializedAsync()
+    {
+        await GetUserId();
+    }
 
     private async Task AddToCart()
     {
-        var cartItem = await CartService.AddItem(new CartItemToAddDto { ProductId = ProductId, Quantity = _quantity, CartId = GetCartId() });
-        CartCounterService.AddToCount(_quantity);
+        var cartItem = await CartService.AddItem(new CartItemToAddDto { ProductId = ProductId, Quantity = Quantity });
+        CartCounterService.AddToCount(Quantity);
     }
 
-    private int GetCartId() => 1;
+    private async Task GetUserId()
+    {
+        if (AuthenticationState == null)
+        {
+            return;
+        }
+
+        var authState = await AuthenticationState;
+        var claims = authState.User.Claims;
+        _userId = claims.FirstOrDefault()?.Value ?? string.Empty;
+    }
 
     private string GetButtonText() => Stock > 0 ? "Buy" : "Reserve";
 
