--- a/WebshopFrontend/Components/Components/CheckoutProductTable.razor
+++ b/WebshopFrontend/Components/Components/CheckoutProductTable.razor
@@ -60,14 +60,12 @@ else
 @code {
 
     public List<CartItemDto> CartItems { get; set; }
-
-    private string _userId = "1";
     
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            CartItems = await CartService.GetAll(_userId);
+            CartItems = await CartService.GetAll(CartService.CartId);
             await InvokeAsync(StateHasChanged);
         }
     }
@@ -100,7 +98,7 @@ else
                 CounterService.AddToCount(-cartItem.Quantity);
                 break;
         }
-        CartItems = await CartService.GetAll(_userId);
+        CartItems = await CartService.GetAll(CartService.CartId);
 
         await InvokeAsync(StateHasChanged);
     }
