--- a/WebshopFrontend/Components/Pages/Checkout.razor
+++ b/WebshopFrontend/Components/Pages/Checkout.razor
@@ -58,7 +58,7 @@
     //         {
     //             Id = 1,
     //             User = user,
-    //             CartItems = await CartService.GetAll(user.Id),
+    //             CartItems = await CartService.GetAllItems(user.Id),
     //             OrderDate = DateTime.Now
     //         };
     // }
