--- a/WebshopFrontend/Components/Components/CartIcon.razor
+++ b/WebshopFrontend/Components/Components/CartIcon.razor
@@ -19,7 +19,7 @@
     {
         if (firstRender)
         {
-            var cart = await CartService.GetAll();
+            var cart = await CartService.GetAllItems();
             CounterService.SetCount(cart.Sum(c => c.Quantity));
             _noOfItemsInCart = CounterService.GetCount();
         }
