--- a/WebshopFrontend/Components/Pages/Register.razor
+++ b/WebshopFrontend/Components/Pages/Register.razor
@@ -8,7 +8,7 @@
         <button type="button" @onclick="Logout">Log out</button>
     </Authorized>
     <NotAuthorized>
-        <h4>Register new user</h4>
+        <h4>Register new userDetails</h4>
         <label for="email">
             Email:
             <InputText id="email" @bind-value="@_registerUserDto.Email"></InputText>
